# pdf-RAG

./: main.py  pyproject.toml
faiss_index/: index.pkl
